# IFT3205-TP2

./: CMakeLists.txt
ProgTpIFT3205_Intercor/: Tp2_IFT3205_2-1.c  Tp2_IFT3205_2-2.c  Tp2_IFT3205_2-3.c  Tp2_IFT3205_2-4.c  Tp2_IFT3205_2-5.c  Tp2_IFT3205_2-6.c  image-Out2.pgm  image-TpIFT3205-2-1a.pgm  image-TpIFT3205-2-1b.pgm  image-TpIFT3205-2-2.pgm  image-TpIFT3205-2-4.pgm  image-TpIFT3205-2-5.pgm  image-TpIFT3205-2-6.pgm
