cmake_minimum_required(VERSION 3.24)
project(TP2 C)

set(CMAKE_C_STANDARD 11)

include_directories(ProgTpIFT3205_Intercor)


add_executable(Tp2_IFT3205_2-1
        ProgTpIFT3205_Intercor/FonctionDemo2.c
        ProgTpIFT3205_Intercor/FonctionDemo2.h
        ProgTpIFT3205_Intercor/Tp2_IFT3205_2-1.c)

target_link_libraries(Tp2_IFT3205_2-1 m)

add_executable(Tp2_IFT3205_2-2
        ProgTpIFT3205_Intercor/FonctionDemo2.c
        ProgTpIFT3205_Intercor/FonctionDemo2.h
        ProgTpIFT3205_Intercor/Tp2_IFT3205_2-2.c)

target_link_libraries(Tp2_IFT3205_2-2 m)

add_executable(Tp2_IFT3205_2-3
        ProgTpIFT3205_Intercor/FonctionDemo2.c
        ProgTpIFT3205_Intercor/FonctionDemo2.h
        ProgTpIFT3205_Intercor/Tp2_IFT3205_2-3.c)

target_link_libraries(Tp2_IFT3205_2-3 m)

add_executable(Tp2_IFT3205_2-4
        ProgTpIFT3205_Intercor/FonctionDemo2.c
        ProgTpIFT3205_Intercor/FonctionDemo2.h
        ProgTpIFT3205_Intercor/Tp2_IFT3205_2-4.c)

target_link_libraries(Tp2_IFT3205_2-4 m)

add_executable(Tp2_IFT3205_2-5
        ProgTpIFT3205_Intercor/FonctionDemo2.c
        ProgTpIFT3205_Intercor/FonctionDemo2.h
        ProgTpIFT3205_Intercor/Tp2_IFT3205_2-5.c)

target_link_libraries(Tp2_IFT3205_2-5 m)

add_executable(Tp2_IFT3205_2-6
        ProgTpIFT3205_Intercor/FonctionDemo2.c
        ProgTpIFT3205_Intercor/FonctionDemo2.h
        ProgTpIFT3205_Intercor/Tp2_IFT3205_2-6.c)

target_link_libraries(Tp2_IFT3205_2-6 m)